# pr-critic

./: .coverage  .gitignore  ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  README.md  REAL_WORLD_EVALUATION.md  SELF_REVIEW.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: config.py  errors.py  security.py
backend/agents/: branch_agent.py  critic_agent.py  false_positive_guard_agent.py  fetch_agent.py  planner_agent.py  rag_agent.py  review_agent.py  selector_agent.py  synthesis_agent.py
backend/api/: issue_extractor.py  main.py
backend/graph/: contracts.py  state.py  workflow.py
backend/mcp/: client.py  github_client.py  github_mock.py  models.py
backend/mcp_server/: __init__.py  github_tools.py
backend/observability/: context.py  logger.py  metrics.py
backend/rag/: tfidf_retriever.py
backend/services/: __init__.py  repo_signals.py  review_runtime.py
backend/utils/: __init__.py  cache.py  diff.py  grounding.py  issues.py  resilience.py  review_merge.py
data/corpus/: clean_code.txt  github_review_patterns.txt  owasp_code_review.txt  owasp_top10.txt  pep8.txt  python_security.txt  react_security.txt  (+3 more)
evaluation/: metrics.py  real_world_cases.json  real_world_cases.py  real_world_results.json  results.json  scenarios.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build_corpus.py  run_evaluation.py
tests/: test_capstone_upgrades.py  test_evaluation.py  test_github_upgrade.py  test_llm_resilience.py  test_pr_critic.py  test_runtime_upgrade.py
(+23 files in other folders)
